--- a/platformio.ini
+++ b/platformio.ini
@@ -10,5 +10,6 @@
 
 [env:pro16MHzatmega328]
 platform = atmelavr
-board = pro16MHzatmega328
+;board = pro16MHzatmega328
+board =  atmega328p
 framework = arduino
