--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:pro16MHzatmega328]
+[env:atmega328p]
 platform = atmelavr
 ;board = pro16MHzatmega328
 board =  atmega328p
