add/atmega328p header

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,8 @@
 
 [env:atmega328p]
 platform = atmelavr
-;board = pro16MHzatmega328
-board =  atmega328p
+board = atmega328p
 framework = arduino
+lib_deps = 
+	mbed-srj17/Adafruit_ST7789@0.0.0+sha.266e25a75299
+	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.3
