--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:atmega328p]
+[env:ATmega328PB]
 platform = atmelavr
-board = atmega328p
+board = ATmega328P
 framework = arduino
 lib_deps = 
 	mbed-srj17/Adafruit_ST7789@0.0.0+sha.266e25a75299
